# dataflow

./: .gitignore  CMakeLists.txt  README.md
include/: data_flow.h  defs.h  operator.h
test/: chebyshev.dot  chebyshev.h  chebyshev.json  fir.dot  fir.h  fir.json  main.cpp
